<resources>
    <string name="app_name">Xpera</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="become_a_member">Become a member.</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="please_fill_in_the_informations_below">Please fill in the informations below</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="sign_up_u"><u>Sign Up</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="expera">Expera</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="let_s_register_your_account">Let’s register your account</string>
    <string name="full_name">Full name</string>
    <string name="login"><u>Login</u></string>
    <string name="your_web_client_id">104113960076-nsfa4gm47q84si0drfdj11la96uhhh6e.apps.googleusercontent.com</string>
    <string name="verification_email">Verification email</string>
    <string name="a_one_time_verification_link_have_n_been_sent_to_your_email_check_it">A one-time verification link have\n been sent to your email check it</string>
    <string name="open_email_app">Open Email App</string>
    <string name="already_checked">Already checked</string>
    <string name="success">Success!</string>
    <string name="Continue">Continue</string>
    <string name="congratulations_you_have_been_n_successfully_authenticated">Congratulations! You have been\n successfully authenticated</string>
    <string name="link_not_received_or_expired">Link not received or Expired ?</string>
    <string name="resend_again"><u>Resend again</u></string>
    <string name="open_menu">Open menu</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="like_this">Like this</string>
    <string name="add_to_bookmarks">Add to bookmarks</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="notification_alert">Notification alert</string>
    <string name="create_new_post">Create new post</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="Bookmark">Bookmark</string>
    <string name="profile">Profile</string>
</resources>