<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="#146D8DFF"
        app:cnb_iconColor="@color/md_theme_light_primary"
        />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:cnb_backgroundColor="#146D8DFF"
        app:cnb_iconColor="@color/md_theme_light_primary"
        />
    <item
        android:id="@+id/bookmarkFragment"
        android:icon="@drawable/ic_bookmark_contained"
        android:title="@string/Bookmark"
        app:cnb_backgroundColor="#146D8DFF"
        app:cnb_iconColor="@color/md_theme_light_primary"
        />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_user"
        android:title="@string/profile"
        app:cnb_backgroundColor="#146D8DFF"
        app:cnb_iconColor="@color/md_theme_light_primary"
        />

</menu>