<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_24sdp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/expera"
            android:src="@drawable/xpera_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            style="@style/TextAppearance.Xpera.SubHeading"
            android:layout_marginTop="@dimen/_36sdp"

            android:text="@string/welcome_back"
            app:layout_constraintLeft_toLeftOf="@id/logo"
            app:layout_constraintRight_toRightOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/tv_fill_info"
            style="@style/TextAppearance.Xpera.Text"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/please_fill_in_the_informations_below"
            android:textColor="@color/grey_5"
            app:layout_constraintLeft_toLeftOf="@id/tv_welcome"
            app:layout_constraintRight_toRightOf="@id/tv_welcome"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_email"
            style="@style/Widget.Xpera.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/_10sdp"
            app:endIconMode="clear_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_fill_info">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/Widget.Xpera.TextInputEditText"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_password"
            style="@style/Widget.Xpera.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/_10sdp"
            app:endIconMode="password_toggle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/Widget.Xpera.TextInputEditText"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            style="@style/Widget.Xpera.Button.ContainedButton"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/log_in"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayout_password" />

        <CheckBox
            android:id="@+id/remember_me"
            style="@style/Widget.Xpera.CheckBox"
            android:text="@string/remember_me"
            app:layout_constraintBottom_toBottomOf="@id/forgot_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/forgot_password" />

        <TextView
            android:id="@+id/forgot_password"
            style="@style/TextAppearance.Xpera.Text"
            android:layout_marginTop="@dimen/_13sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/md_theme_light_primary"
            app:layout_constraintRight_toRightOf="@id/login"
            app:layout_constraintTop_toBottomOf="@id/login" />

        <TextView
            android:id="@+id/tv_continue_with"
            style="@style/TextAppearance.Xpera.Text"
            android:layout_marginTop="@dimen/_36sdp"
            android:text="@string/or_continue_with"
            android:textColor="@color/grey_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgot_password" />

        <Button
            android:id="@+id/sign_with_google"
            style="@style/Widget.Xpera.Button.OutlinedButton"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/google"
            app:icon="@drawable/ic_google"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_continue_with" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                style="@style/TextAppearance.Xpera.Text"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/signup"
                style="@style/TextAppearance.Xpera.Text"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/sign_up_u"
                android:textColor="@color/md_theme_light_primary" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/grayOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3D000000"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_gravity="top"
        android:indeterminate="true"
        android:visibility="gone" />


</FrameLayout>