<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.VerificationEmailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_24sdp">


        <TextView
            android:id="@+id/tv_ver_email"
            style="@style/TextAppearance.Xpera.SubHeading"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/verification_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ver_link"
            style="@style/TextAppearance.Xpera.Text"
            android:layout_marginTop="@dimen/_9sdp"
            android:text="@string/a_one_time_verification_link_have_n_been_sent_to_your_email_check_it"
            android:textColor="@color/grey_4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ver_email" />

        <ImageView
            android:id="@+id/img_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            android:contentDescription="@string/verification_email"
            android:src="@drawable/img_message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ver_link" />

        <Button
            android:id="@+id/open_email_app"
            style="@style/Widget.Xpera.Button.ContainedButton"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/open_email_app"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_message" />

        <Button
            android:id="@+id/cont"
            style="@style/Widget.Xpera.Button.OutlinedButton"
            android:layout_marginTop="@dimen/_9sdp"
            android:text="@string/Continue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/open_email_app" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cont">

            <TextView
                style="@style/TextAppearance.Xpera.Text"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/link_not_received_or_expired"
                android:textColor="@color/grey_6" />

            <TextView
                android:id="@+id/send_again"
                style="@style/TextAppearance.Xpera.Text"
                android:text="@string/resend_again"
                android:textColor="@color/md_theme_light_primary" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/grayOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3D000000"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_gravity="top"
        android:indeterminate="true"
        android:visibility="gone" />


</FrameLayout>