<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_24sdp"
    tools:context=".presentation.auth.SuccessFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_36sdp"
        android:contentDescription="@string/success"
        android:src="@drawable/img_success"
        app:layout_constraintBottom_toTopOf="@id/tv_success"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_success"
        style="@style/TextAppearance.Xpera.SubHeading"
        android:layout_marginBottom="@dimen/_9sdp"
        android:text="@string/success"
        app:layout_constraintBottom_toTopOf="@id/tv_cong"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_cong"
        style="@style/TextAppearance.Xpera.Text"
        android:layout_marginBottom="@dimen/_72sdp"
        android:text="@string/congratulations_you_have_been_n_successfully_authenticated"
        android:textColor="@color/grey_4"
        app:layout_constraintBottom_toTopOf="@id/cont"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/cont"
        style="@style/Widget.Xpera.Button.ContainedButton"
        android:text="@string/Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>